--- a/index.Rmd
+++ b/index.Rmd
@@ -46,7 +46,7 @@ Should be more space now.
 first put an image inside the folder where your `Rmd` file is located. 
 Then type `![](full_image_filename_here){width="50%"}`
 
-![](cat.jpeg){width="50%"}
+![](../images/cat.jpeg){width="50%"}
 
 # RMarkdown 
 
